<resources>
    <string name="app_name">Loftmoney</string>
    <string name="edittext_name_hint">Name</string>
    <string name="edittext_price_hint">Price</string>
    <string name="add_button_title">Add</string>
    <string name="expenses">Expences</string>
    <string name="income">income</string>
    <string name="balance">balance</string>
    <string name="massage_success">"Successfully added "</string>
    <string name="activity_main_toolbar_title">"Loftmoney"</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="expense_not_found">Вы ещё не внесли свои изменения. Нажмите на кнопку в углу, чтобы создать их.</string>
    <string name="balance_available_money">LoftMoney</string>
</resources>
