<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="33dp"
    android:paddingEnd="104dp"
    tools:context=".skreens.second.SecondActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:hint="@string/edittext_name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        android:hint="@string/edittext_price_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textSecondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSecondEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="61dp"
        android:enabled="false"
        android:drawableLeft="@drawable/check_selector"
        android:background="@null"
        android:text="@string/add_button_title"
        android:textColor="@color/add_button_text_color_selector" />

</RelativeLayout>
